WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255383
REGRESSION(
262844@main
): css3/filters/reference-filter-change-repaint.html is randomly failing
https://bugs.webkit.org/show_bug.cgi?id=255383
Summary
REGRESSION(262844@main): css3/filters/reference-filter-change-repaint.html is...
Fujii Hironori
Reported
2023-04-12 20:42:06 PDT
REGRESSION: css3/filters/reference-filter-change-repaint.html is randomly failing
https://results.webkit.org/?suite=layout-tests&test=css3%2Ffilters%2Freference-filter-change-repaint.html
262845@main
Buildbot: builder Apple-Monterey-Release-AppleSilicon-WK2-Tests build 8683
https://build.webkit.org/#/builders/370/builds/8683
https://build.webkit.org/results/Apple-Monterey-Release-AppleSilicon-WK2-Tests/262845@main%20(8683)/results.html
--- /Volumes/Data/worker/Apple-Monterey-Release-AppleSilicon-WK2-Tests/build/layout-test-results/css3/filters/reference-filter-change-repaint-expected.txt +++ /Volumes/Data/worker/Apple-Monterey-Release-AppleSilicon-WK2-Tests/build/layout-test-results/css3/filters/reference-filter-change-repaint-actual.txt @@ -1,4 +1 @@ - (repaint rects - (rect 8 8 200 200) -)
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-04-12 20:49:35 PDT
Caused by
262844@main
(
bug#255258
)???
Fujii Hironori
Comment 2
2023-04-12 21:10:27 PDT
This is reproducible with WinCairo Debug on my PC. I confirmed reverting
262844@main
fixes the flaky failure.
Chris Dumez
Comment 3
2023-04-12 23:14:51 PDT
Ok, I can investigate tomorrow. Hopefully I'll be able to reproduce. Thanks for the heads up.
Chris Dumez
Comment 4
2023-04-13 08:57:43 PDT
I can reproduce the flakiness locally. I am debugging.
Chris Dumez
Comment 5
2023-04-13 09:04:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12699
EWS
Comment 6
2023-04-14 12:47:09 PDT
Committed
262985@main
(2e76ca3e586a): <
https://commits.webkit.org/262985@main
> Reviewed commits have been landed. Closing PR #12699 and removing active labels.
Radar WebKit Bug Importer
Comment 7
2023-04-14 12:48:16 PDT
<
rdar://problem/108061699
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug